--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 							<li class="head-li"> Email: <a href="mailto:contact@mydomain.com">contact@mydomain.com</a></li>
 						</ul>
 
-						<form action="" method="GET" class="form-head">
+						<form  method="GET" class="form-head">
 							<input type="search" name="q" placeholder="Search" class="search">
 							<input type="submit" class="head-btn" value="Go">
 						</form>
@@ -315,7 +315,7 @@
                             FAX:XXXX XXX XXX <br>
                             Email: <a href="mailto:contact@mydomain.com">contact@mydomain.com</a>
                         </p>
-                        <form action="" class="form-group">
+                        <form  method="post" class="form-group">
                     
                             <fieldset>
                                 
